(BSR)[PRO] fix: keep scrollbar from closing panel (#21674)

--- a/pro/src/ui-kit/DialogBuilder/DialogBuilder.module.scss
+++ b/pro/src/ui-kit/DialogBuilder/DialogBuilder.module.scss
@@ -83,6 +83,7 @@ $animation-timing-function: ease-in-out;
   width: initial;
   margin: var(--size-spacing-xxl) auto;
   padding: var(--size-spacing-l);
+  overflow-y: auto;
 }
 
 .dialog-builder-overlay-drawer {
